@@ -2,7 +2,9 @@ package com.assignment.customer_batch_processor.config;
 
 import com.assignment.customer_batch_processor.Customer_Entity.Customer;
 import com.assignment.customer_batch_processor.Utilities.CustomerItemProcessor;
+import com.assignment.customer_batch_processor.Utilities.CustomerItemReader;
 import com.assignment.customer_batch_processor.Utilities.CustomerItemWriter;
+import com.assignment.customer_batch_processor.Utilities.NoOpItemProcessor;
 import com.assignment.customer_batch_processor.validator.RetryException;
 import com.assignment.customer_batch_processor.validator.ValidationException;
 import jakarta.persistence.EntityManagerFactory;
@@ -16,20 +18,14 @@ import org.springframework.batch.core.step.builder.StepBuilder;
 import org.springframework.batch.item.ItemProcessor;
 import org.springframework.batch.item.ItemReader;
 import org.springframework.batch.item.ItemWriter;
-import org.springframework.batch.item.database.JpaItemWriter;
-import org.springframework.batch.item.database.builder.JpaItemWriterBuilder;
 import org.springframework.batch.item.file.FlatFileItemReader;
-import org.springframework.batch.item.file.mapping.BeanWrapperFieldSetMapper;
-import org.springframework.batch.item.file.mapping.DefaultLineMapper;
-import org.springframework.batch.item.file.transform.DelimitedLineTokenizer;
 import org.springframework.batch.item.support.CompositeItemWriter;
 import org.springframework.batch.item.support.builder.CompositeItemWriterBuilder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.io.FileSystemResource;
-import org.springframework.dao.DataAccessResourceFailureException;
+import org.springframework.dao.DataAccessException;
 import org.springframework.transaction.PlatformTransactionManager;
 
 import java.util.Arrays;
@@ -47,10 +43,18 @@ public class BatchConfig {
 
     @Autowired
     private CustomerItemWriter customerItemWriter;
+
+    @Autowired
+    CustomerItemReader customerItemReader;
+
+    @Autowired
+    NoOpItemProcessor noOpItemProcessor;
+
+
     
     @Bean
     public Job csvReadingJob(JobRepository jobRepository, Step csvReadingStep, Step validationStep) {
-        log.info("Creating CSV Reading Job with validation and encryption");
+        log.debug("Creating CSV Reading Job with validation and encryption");
         return new JobBuilder("csvReadingJob", jobRepository)
                 .start(validationStep)
                 .on("FAILED").fail()                 // Explicitly fail the job
@@ -67,22 +71,27 @@ public class BatchConfig {
                                ItemReader<Customer> csvItemReader,
                                ItemProcessor<Customer, Customer> csvItemProcessor,
                                ItemWriter<Customer> noOpWriter) {
-        log.info("inside validationStep");
+        log.debug("inside validationStep");
         return new StepBuilder("validationStep", jobRepository)
                 .<Customer, Customer>chunk(2000, transactionManager)
                 .reader(csvItemReader)
-                .processor(csvItemProcessor) // Uses your CustomerItemProcessor
+                .processor(csvItemProcessor) // Uses CustomerItemProcessor
                 .writer(noOpWriter)
                 .build();
 
 
     }
-    
+
+
+    /**
+     * Retry csvReadingStep
+     * runs after validation step.
+     */
     @Bean
-    public Step csvReadingStep(JobRepository jobRepository, 
+    public Step csvReadingStep(JobRepository jobRepository,
                              PlatformTransactionManager transactionManager,
                              ItemReader<Customer> csvItemReader,
-                             ItemProcessor<Customer, Customer> csvItemProcessor,
+                             ItemProcessor<Customer, Customer> noOpProcess,
                              ItemWriter<Customer> csvItemWriter) {
         
         log.info("Creating CSV Reading Step with chunk size: 1000");
@@ -91,70 +100,44 @@ public class BatchConfig {
         return new StepBuilder("csvReadingStep", jobRepository)
                 .<Customer, Customer>chunk(2000, transactionManager)
                 .reader(csvItemReader)
-                .processor(csvItemProcessor) // Uses your CustomerItemProcessor
+                .processor(noOpProcess) // Uses your CustomerItemProcessor
                 .writer(csvItemWriter)
                 .faultTolerant()
                 .noRetry(ValidationException.class)
-                .retry(DataAccessResourceFailureException.class)
-//                .retry(DataAccessException.class)
+                .retry(DataAccessException.class)
                 .retry(RetryException.class)
-                //.retryLimit(3)
-                .retryLimit(2)
+                .retryLimit(3)
                 .allowStartIfComplete(false)
                 .startLimit(5)
                 .build();
-
-
-
-
-
     }
 
-    /**
-     * This class is same as customer item reader class
-     */
-    /
+
 
     @Bean
     @StepScope
     public FlatFileItemReader<Customer> csvItemReader(@Value("#{jobParameters['filePath']}") String filePath) {
-        log.info("Configuring CSV reader for file: {}", filePath);
 
-        FlatFileItemReader<Customer> reader = new FlatFileItemReader<>();
-        reader.setName("csvItemReader");
-        reader.setResource(new FileSystemResource(filePath));
-        reader.setSaveState(true);
-
-        // Configure line mapper
-        DefaultLineMapper<Customer> lineMapper = new DefaultLineMapper<>();
-
-        // Configure tokenizer
-        DelimitedLineTokenizer tokenizer = new DelimitedLineTokenizer();
-        tokenizer.setNames("name", "email", "phoneNumber", "aadhaarNumber", "panNumber", "state", "city");
-        tokenizer.setDelimiter(",");
-        tokenizer.setQuoteCharacter('"');
-        tokenizer.setStrict(false);
-
-        // Configure field set mapper
-        BeanWrapperFieldSetMapper<Customer> fieldSetMapper = new BeanWrapperFieldSetMapper<>();
-        fieldSetMapper.setTargetType(Customer.class);
-        fieldSetMapper.setDistanceLimit(0);
-
-        lineMapper.setLineTokenizer(tokenizer);
-        lineMapper.setFieldSetMapper(fieldSetMapper);
-
-        reader.setLineMapper(lineMapper);
-        reader.setLinesToSkip(1); // Skip header row
-        reader.setSkippedLinesCallback(line -> log.info("Skipped header line: {}", line));
-
-        return reader;
+        return CustomerItemReader.customerFlatFileItemReader(filePath);
     }
-    
-    // UPDATED: Use your CustomerItemProcessor with validation and encryption
+
+    /**
+     * this performs validation checks
+     * @return Customer
+     */
     @Bean
     public ItemProcessor<Customer, Customer> csvItemProcessor() {
         log.info("Using CustomerItemProcessor with validation and encryption");
         return customerItemProcessor; // Your component with validation & encryption
+    }
+
+    /**
+     * this does not perform any validation checks again.
+     * @return Customer
+     */
+    @Bean
+    public ItemProcessor<Customer,Customer> noOpProcess() {
+        return noOpItemProcessor;
     }
     
     /**
@@ -177,28 +160,13 @@ public class BatchConfig {
             // Don't save anything - just validate
         };
     }
-
-    @Bean
-    public ItemWriter<Customer> noOpProcess() {
-        return customers -> {
-            log.info("Validated {} customers successfully", customers.size());
-            // Don't save anything - just validate
-        };
-    }
     
-    /**
-     * Database Item Writer - saves customers to database using JPA
-     */
-//    @Bean
-//    public JpaItemWriter<Customer> databaseItemWriter() {
-//        return new JpaItemWriterBuilder<Customer>()
-//                .entityManagerFactory(entityManagerFactory)
-//                .build();
-//    }
+
+
 @Bean
 public ItemWriter<Customer> databaseItemWriter()
 {
-    log.error("using customerItemwriter for database operations");
+    log.error("using customerItemWriter for database operations");
     return customerItemWriter;
 }
     /**
@@ -212,14 +180,12 @@ public ItemWriter<Customer> databaseItemWriter()
                 public void write(org.springframework.batch.item.Chunk<? extends Customer> chunk) throws Exception {
                     totalWritten += chunk.size();
 
-                    // Log batch summary instead of individual records for better performance
-                    log.info("Saved batch of {} customers to database. Total processed: {}",
+                    log.info("Saved batch of {} customers to database. Total processed: {} ",
                             chunk.size(), totalWritten);
 
-                    // Optionally print first customer from each batch for verification
                     if (!chunk.isEmpty()) {
-                        Customer first = chunk.getItems().get(0);
-                        log.info("Sample record - ID: {}, Name: {}, Email: {}, State: {}",
+                        Customer first = chunk.getItems().getFirst();
+                        log.info("Sample record - ID: {}, Name: {}, Email: {}, State: {} ",
                                 first.getId(), first.getName(), first.getEmail(), first.getState());
                     }
                 }
